k8s/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
#          env:
#            - name: GF_INSTALL_PLUGINS
#              value: "grafana-kubernetes-app"
          ports:
            - containerPort: 3000
